maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:26: error: ';' expected but 'else' found.
    } else {
      ^IslandMaze:60: error: Unmatched closing brace '}' ignored here
}
^