maze.island.IslandMaze.scala.code
override def run() {
  
  def avanceVersNord () {
    
    setDirection(Direction.NORTH)
    while (estFaceMur != true) {
      avance();
    }
    
   
  }
  
  def suitAGauche () {
   	//droite();
    
    if (estFaceMur == false) {
      //while (getDirection() != Direction.NORTH) {
        // séparé les deux condition 
        gauche();
        while (estFaceMur() == true) {
          droite();
        }
        avance();
      }
    } else {
        gauche();
     
    }
    
    
  }
  
  def keepHandOnSideWall()  {
    
    var etat = 0;
    
    etat match {
      
      case 0 => avanceVersNord(); etat = 1;
      
      case 1 => suitAGauche(); etat = 0;
      
      case _ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
         
    }
    
  }
  
  while (estSurBiscuit == false) {
    keepHandOnSideWall();
  }
  
	prendBiscuit();

  
}